# Barnes-Hut-Gravity-Sim

./: .gitattributes  README.md  barnes.sln
barnes/: Shader.cu  barnes.vcxproj  compute.glsl  functors.cuh  functors.h  grid.h  kernel.cu  kernel.cuh  kernel.h  kernels.cuh  kernels.h  points.cuh  points.h  settings.h  timer.h  tree.cuh  tree.h  zOrder.cuh  zOrder.h  zipIT.cuh  zipIT.h
gravity/: CMakeLists.txt  main.cu  timer.cuh
gravity/src/: settings .c  settings.h
gravity/src/OpenGL/: Shader.h  buffer.h  grid.hpp
gravity/src/OpenGL/Shaders/: fragment.glsl  vertex.glsl  vertex1.glsl
gravity/src/OpenGL/src/: Shader.cu  buffer.cpp  grid.cpp
gravity/src/physics/: points.cu  points.cuh
gravity/src/quad_tree/: functors.cuh  tree.cu  tree.cuh  zOrder.cu  zOrder.cuh
gravity/src/runtime/: kernels.cu  kernels.cuh
